# core

./: LICENSE  pyproject.toml
baremetalninja/: __init__.py  cli.py  core.py
